--- a/pc.css
+++ b/pc.css
@@ -1,518 +1,551 @@
-/* 사용자 설정 부분 */
-:root {
-	--bgColor: #f0f0f0;   /* 배경 색 */
-	--mainColor: #777777;   /* 메인 컬러 */
-	--mainColor5: #77777755; /* 공지, 인기글 hover */
-	--mainColor3: #77777733; /* 공지, 인기글 */
-	--mainColor2: #77777733; /* 트게더 메뉴, 게시글 hover */
-	--logoURL: url(여기에 로고 주소 입력);
-	--logoWidth: 200px;	 /* 로고 너비 */
-	--before: ""; /* 접속자 수 앞 문구 */
-	--after: "";  /* 접속자 수 뒤 문구 */
+/* 배경 */
+
+body {
+
+    height: auto !important;
+
+    background: #f0f0f0;    /* 배경색 코드 입력 */
+
+        /* ex) background: #ffffff; */
+
 }
+
+
 
 /* 모든 항목 focus시 아웃라인 제거 */
 *:focus { outline: none !important; }
 
 html {
-	background: var(--bgColor);
-  height: auto;
+	background: #f0f0f0;
+	height: auto;
 }
 
 body {
-  background: transparent;
+	background: transparent;
 }
 
 a,
 a:hover,
 a:focus {
-	color: var(--mainColor);
+	color: #f0f0f0;
 }
 
+/* 로고
 
-/*************** header ***************/
-
-header {
-	padding: 0.5em 0 0.5em 0;
-}
-
-/* 트게더 로고 ( 없으면 주석처리 하세요 ) */
-/*
 header .row>div:nth-child(1)>a {
-	display: block;
-	width: var(--logoWidth);
-	height: 50px;
-	background: var(--logoURL) no-repeat;
-	background-size: auto 50px;
+
+    display: block;
+
+    width: 200px;
+
+    height: 50px;
+
+    background: url() no-repeat; url(로고 경로 입력)
+
+    background-size: auto 50px;
+
+}
+
+
+
+header .row>div:nth-child(1)>a>img {
+
+  display: none;
+
 }
 */
 
-/* 기본 트게더 로고 제거 ( 없으면 주석처리 하세요 ) */
-/*
-header .row>div:nth-child(1) > a > img {
-	display: none;
-}
-*/
 
-/* 검색 창 */
-header #right-search-form>input[type='text'] {
-	border: 2px solid var(--mainColor);
-	transition: 0.2s;
+/* 검색창 */
+
+
+
+header #right-search-form>input[type=text] {
+
+    border: 3px solid #BE81F7; /* 검색창 테두리 색 */
+
+    border-radius: 15px;
+
 }
 
-header #right-search-form>input[type='text']:hover,
-header #right-search-form>input[type='text']:focus {
-	transform: scale(1.05);
-	transition: 0.2s;
-}
+
 
 /* 검색 버튼 */
+
+
+
 header #right-search-form>#right-search-btn {
-	color: var(--mainColor);
-	transition: 0.2s;
+
+    color: #BE81F7; /* 검색창 옆 돋보기 색 */
+
 }
 
-header #right-search-form>#right-search-btn:hover,
-header #right-search-form>#right-search-btn:focus {
-	transform: scale(1.25);
-	transition: 0.2s;
+
+
+/* 배너 */
+
+
+
+header #header-bar>.row, #main .menu-wrapper, #main #main-content>div.frame {
+
+    border-radius: 15px;
+
 }
 
-/* 상단바 */
-header #header-bar {
-	margin-bottom: 0.5em;
-}
+
+
+/* 광고 배너 */
+
+
 
 header #header-bar>.row {
-	border: 2px solid var(--mainColor);
+
+    border-top: 3px solid #BE81F7  !important; /* 광고 배너 테두리 색 */
+
+    border: 1px solid #FFFFFF; /* 광고 배너 테두리 색 */
+
 }
 
-/* 전광판 */ header #header-bar #header-top-notice strong.notice-badge,
-/* 트게더 알림 */ header #header-bar #header-menu-right #userDropdown #notification-badge {
-	background: var(--mainColor);
+
+
+/* 광고 배너 광고 뱃지 */
+
+
+
+header #header-bar #header-top-notice strong.notice-badge {
+
+    background: #FFFFFF; /* 광고 배너 광고 뱃지 배경 색상 (전광판)*/
+
 }
 
 
-/*************** main ***************/
 
-/* 트게더 메뉴 */
+/* 좌측 배너 */
+
+
+
 #main .menu-wrapper {
-	background: white;
-	border: 2px solid var(--mainColor);
-	width: 180px;
+
+    border: 0px solid #BE81F7; /* 좌측 메뉴 테두리 색 */
+
+    border-top: none !important;
+
 }
 
-#main .menu-wrapper > a {
-	padding: 0.35em 0.5em 0.35em 0.5em;
-	letter-spacing: -0.05em;
-}
 
-#main .menu-wrapper > a:hover {
-	background-color: var(--mainColor2);
-}
 
-#main .menu-wrapper .spacer {
-	background: var(--mainColor);
-	height: 2px;
-}
+/* 좌측 배너 헤더 */
+
+
 
 #main .menu-wrapper>.header {
-	background: var(--mainColor);
+
+    background: #BE81F7; /* 좌측 배너 제목 배경 색 */
+
+    border-radius: 15px 15px 0 0;
+
 }
 
-#main .menu-wrapper>a>em,
-#main .menu-wrapper>a>i.fa.fa-square {
-	color: var(--mainColor);
+
+
+/* 좌측 배너 빈 공간 */
+
+
+
+#main .menu-wrapper .spacer {
+
+    background: none;
+
 }
 
-/* 게시글 프레임 */
+
+
+/* 좌측 배너 하단 */
+
+
+
+#main .menu-wrapper a:nth-last-child(1) {
+
+    border-radius: 0px 0px 15px 15px;
+
+}
+
+
+
+/* 메인 배너 */
+
+
+
 #main #main-content>div.frame {
-	background: transparent;
-	border: none;
+
+    border-top: 0px solid #FFFFFF  !important; /* 메인 배너 테두리 스트리머 이름 위 공간*/
+
+    border: 0px solid #FFFFFF; /* 메인 배너 테두리 */
+
 }
 
 
-/*************** board ***************/
 
-#board-info {
-	margin: 0;
-	height: auto;
-	background: white;
-	border: 2px solid var(--mainColor);
-	margin-bottom: 0.5em;
+/* 접속자 수 */
+
+#board-info #score-area {
+	
+	color: #FFFFFF;
 }
 
-#board-info h1 {
-	margin-top: 12px;
-	font-size: 28px;
-	border-bottom: 2px solid var(--mainColor);
-	width: calc(100% - 100px); /* 스트리머 게시판 적용시 */
+#board-info #viewers-area {
+
+    color: #FFFFFF; /* 접속자 수 글씨 색 */
+
 }
 
-#board-info h1>a {
-	transition: 0.2s;
-}
 
-#board-info h1>a:hover,
-#board-info h1>a:focus {
-	color: var(--mainColor);
-	transition: 0.2s;
-}
-
-#board-info #board-info-bottom a {
-	color: var(--mainColor);
-	font-size: 14px;
-}
-
-#board-info > #board-info-bottom {
-	margin-top: 10px;
-}
-
-#board-info>img,
-#board-info>h1,
-#board-info>#board-info-bottom {
-	float: left!important;
-}
-
-#board-info>img#board-info-profile-img {
-	width: 80px;
-	margin-right: 15px;
-	border: 2px solid var(--mainColor);
-  border-radius: 0;
-	transition: 0.2s;
-}
-
-#board-info>img#board-info-profile-img:hover {
-	transform: scale(1.1);
-}
 
 #board-info #viewers-area #viewers:before {
-	content: var(--before);
-	cursor: text;
+
+    content: "";    /* 숫자 앞에 들어갈 문구 */
+
+        /* ex) content: "트수 "; */
+
+        /* 출력 시 : 트수 n */
+
+    cursor: text;
+
 }
+
+
 
 #board-info #viewers-area #viewers:after {
-	content: var(--after);
-	cursor: text;
+
+    content: "";    /* 숫자 뒤에 들어갈 문구 */
+
+        /* ex) content: "명 접속중"; */
+
+        /* 출력시 : n명 접속중 */
+
+    cursor: text;
+
 }
 
 
-/*************** article ***************/
 
-.frame>.frame,
-#article-list {
-	background: white;
-	border: 2px solid var(--mainColor);
+/* 프로필 테두리 동그랗게 만들기 */
+
+
+#board-info #board-info-profile-img {
+
+    width: 70px;
+
+    border-radius: 100px;
+
+    border: solid 2px #BE81F7;
+
+    background: #FFFFFF;
+
+    position : absolute;
+
+    top : 4px;
+
+    z-index: 1;
+
 }
 
-/* 공지 숨기기 버튼 */
-#article-list #article-option-area {
-	right: 2px;
-	top: 2px;
+
+/* 게시판 이름 마진 주기 */
+
+
+#board-info h1 {
+
+    margin-left: 85px
+
 }
 
-#article-list #article-option-area> #article-option-area-toggle-btn {
-	background: #eaeaea;
-	width: 34px;
-	height: 34px;
-	border: 2px solid;
-	transition: 0.2s ease 0s;
-	line-height: inherit;
+
+/* 즐겨찾기 , 소개, 채널, 스케줄, 클립 버튼들 마진 */
+
+
+#board-info #board-info-bottom {
+
+    margin-left: 85px;
+
 }
 
-/* 카테고리 */
-#article-list #article-list-category {
-	background: transparent;
-	border: none;
-	margin-top: 2px;
-	margin-bottom: 2px;
+
+/* 즐찾, 소개, 채널, 스케줄, 클립 버튼들 색 변경 */
+
+
+#board-info #board-info-bottom a {
+
+  color: #151515;
+
 }
 
-#article-list #article-list-category>a {
-	background: transparent;
-  color: var(--mainColor);
-	position: relative;
+/* 카테고리 쪽 맨 우측 공지 가리기 모양 둥글게 및 위치 조정 */
+
+
+#article-list #article-option-area>#article-option-area-toggle-btn {
+	
+	border-radius: 25px;
+	margin-left: -50px;
+
 }
 
-#article-list #article-list-category>a::before {
-	top: 0;
-}
 
-#article-list #article-list-category>a::after {
-	bottom: 0;
-}
 
-#article-list #article-list-category>a::before,
-#article-list #article-list-category>a::after {
-	height: 2px;
-	width: 100%;
-	background: var(--mainColor);
-	content: "";
-	position: absolute;
-	left: 0px;
-	transform: scaleX(0);
-	transition: 0.3s;
-}
+/* 메인 배너 글 공지 */
 
-#article-list #article-list-category>a:hover::before,
-#article-list #article-list-category>a:hover::after {
-	transform: scaleX(1);
-}
 
-/* 게시글 */
-#article-list>.article-list-row {
-	border: none;
-	transition: 0.2s;
-}
 
-#article-list>.article-list-row:hover,
-#article-list>.article-list-row:focus {
-	background-color: var(--mainColor2);
-	transform: scale(1.01);
-	transition: 0.2s;
-}
-
-#article-list>.article-list-row.hot,
 #article-list>.article-list-row.notice {
-	background-color: var(--mainColor3);
+
+    background-color: #E6E0F8; /* 공지 배경 색 */
+
 }
 
-#article-list>.article-list-row.hot:hover,
-#article-list>.article-list-row.hot:focus,
-#article-list>.article-list-row.notice:hover,
-#article-list>.article-list-row.notice:focus {
-	background-color: var(--mainColor5);
+/* 글 추천 버튼 */
+
+
+
+.vote-btn[data-type="up"] {
+
+  border: none;
+
+  font-size: 0;
+
+  outline: 0 !important; 
+
 }
 
-#article-list>.article-list-row>.item>.list-header {
-	border-left: none;
+
+
+.vote-btn[data-type="up"]:hover {
+
+  background: none !important;
+
 }
 
-/* 게시글 추천 수 */
+
+
+.vote-btn[data-type="up"]::before {
+
+  display: inline-block;
+
+  background: white;
+
+  border: solid #5CB85C 1px;
+
+  float: left;
+
+  width: 60px;
+
+  height: 60px;
+
+  border-radius: 60px;
+
+  font-size: 26pt;
+
+  content: "\f164";
+
+  padding-top: 17px;
+
+  padding-left: 2px;
+
+  font: normal 22px/1 FontAwesome;
+
+  -moz-transition:color .2s ease;
+
+  -o-transition:color .2s ease;
+
+  -ms-transition:color .2s ease;
+
+  -webkit-transition:color .2s ease;
+
+  transition:color .2s ease;
+
+}
+
+
+
+.vote-btn[data-type="up"]:hover::before {
+
+  background: #5CB85C;
+
+  color: white;
+
+}
+
+
+
+.vote-btn[data-type="up"]:focus::before {
+
+  color: #5CB85C;
+
+}
+
+
+
+.vote-btn[data-type="up"]:focus:hover::before {
+
+  color: white;
+
+}
+
+
+
+.vote-btn[data-type="up"] span {
+
+  float: left;
+
+  padding-top: 14px;
+
+  padding-left: 15px;
+
+  font-size: 22px;
+
+  color: #5CB85C;
+
+}
+
+/* 글 추천 수 */
+
+
+
 #article-list>.article-list-row>.item>.list-header>span {
-	background: var(--mainColor);
+
+    background-color: #; /* 글 추천 수 배경 색 */
+
 }
 
-/* 게시글 추천 수 0 */
-#article-list>.article-list-row>.item>.list-header.v0>span,
-#article-list>.article-list-row>.item>.list-header.v0>span:hover {
-    color: transparent !important;
-    background-color: transparent !important;
-}
 
-/* 게시글 댓글 수 */
+
+/* 댓글 수 */
+
+
+
 #article-list>.article-list-row>.item>.list-title>small.comment-count {
-	color: var(--mainColor);
+
+    color: #; /* 댓글 수 색 */
+
 }
 
-/* 로그인한 게시글 작성자 */
-#article-list>.article-list-row>.item>.list-title>.list-writer.logged>span {
-	color: var(--mainColor);
-}
 
-/* 게시글 검색 창 */
-#article-list #boardSearchForm .form-control {
-	border-color: var(--mainColor);
-}
-
-/* 게시글 본문 */
-#article-info {
-	background: white;
-	border: 2px solid var(--mainColor);
-	border-bottom: 1px;
-	margin-top: 0.5em;
-}
-
-#article-info>h2 {
-	margin-top: 5px;
-	margin-left: 5px;
-}
-
-#article-info #article-info-writer,
-#article-content-wrapper>.header>#article-time {
-	margin-left: 8px;
-}
-
-#article-content-wrapper>.header>#article-views {
-	margin-right: 8px;
-}
-
-#article-content-wrapper {
-	padding: 0;
-	background: white;
-	border: 2px solid var(--mainColor);
-	border-bottom: 1px;
-}
-
-#article-content-wrapper>.header {
-	border-top: none;
-	border-bottom: 2px solid var(--mainColor);
-	background: transparent;
-}
-
-#article-content-wrapper #article-content {
-	margin: 0.5em;
-	border: none;
-}
-
-#article-content-wrapper>.footer {
-	border-top: 2px solid var(--mainColor);
-  border-bottom: 2px solid var(--mainColor);
-  margin-bottom: 0.5em;
-	background: white;
-}
-
-#article-neighbor-list {
-    border: 2px solid var(--mainColor);
-    background: white;
-}
-
-#article-neighbor-list>div:hover,
-#article-neighbor-list>div:focus {
-	background: linear-gradient(to right, white, var(--mainColor2), white);
-}
-
-#article-neighbor-list>div>a,
-#article-neighbor-list>div>span.indicator,
-#article-neighbor-list>div>span.author {
-	color: var(--mainColor);
-}
-
-/* 댓글 */
-#article-reply-area {
-	padding: 0;
-	background: white;
-	border: 2px solid var(--mainColor);
-  margin-top: 0.5em;
-	margin-bottom: 1em;
-}
 
 #article-reply-area > .header h5 {
-	color: var(--mainColor);
+
+    color: #; /* 댓글 수 색 */
+
 }
 
-#article-reply-area #reply-real-area .reply.active,
-#article-reply-area #reply-best-area .reply.active {
-	background-color: var(--mainColor2);
+
+
+/* 인기글 버튼 */
+
+
+
+#article-list #article-list-menu>.btn.best {
+
+    border-radius: 15px;
+
 }
 
-#article-reply-area #reply-real-area .reply > .reply-header,
-#article-reply-area #reply-best-area .reply > .reply-header {
-	padding: 0.3em 0.5em;
-	background: #fcfcfc;
+
+
+/* 설정 버튼 */
+
+
+
+#article-list #article-list-menu>.btn.cog {
+
+    border-radius: 15px;
+
 }
 
-#article-reply-area #reply-real-area .reply > .reply-header > .reply-writer.logged,
-#article-reply-area #reply-best-area .reply > .reply-header > .reply-writer.logged {
-	color: var(--mainColor);
+
+
+/* 삭제 버튼 */
+
+
+
+#article-list #article-list-menu>.btn.del {
+
+    border-radius: 15px;
+
 }
 
-.fr-popup,
-.fr-toolbar.fr-top {
-	border-top: 3px solid var(--mainColor);
+
+
+/* 글 쓰기 버튼 */
+
+
+
+#article-list #article-list-menu>.btn.write {
+
+    border-radius: 15px;
+
 }
 
-.fr-toolbar .fr-command.fr-btn,
-.fr-popup .fr-command.fr-btn {
-	color: var(--mainColor);
+
+
+.btn-primary {
+
+    background-color: #BE81F7; /* 글 쓰기 버튼 배경 색 */
+
+    border-color: #; /* 글 쓰기 버튼 배경 색 */
+
 }
 
-.fr-toolbar .fr-command.fr-btn.fr-dropdown::after,
-.fr-popup .fr-command.fr-btn.fr-dropdown::after {
-	border-top: 4px solid var(--mainColor);
+/* 진은검 아이콘 삭제 */
+
+
+
+img[src="https://static-cdn.jtvnw.net/chat-badges/mod.png"] {
+
+    display: none;
+
 }
 
-/* 트게더 페이지 */
-.pagination>.active>a,
-.pagination>.active>a:focus,
-.pagination>.active>span,
-.pagination>.active>span:focus {
-	background-color: var(--mainColor);
-	border-color: var(--mainColor);
-	transition: 0.2s;
-}
-.pagination>.active>a:hover,
-.pagination>.active>span:hover,
-.pagination>li>a:hover,
-.pagination>li>span:hover {
-	background-color: white;
-	border-color: var(--mainColor);
-	color: var(--mainColor);
-	transition: 0.2s;
-}
-.pagination>li>a,
-.pagination>li>a:focus,
-.pagination>li>span
-.pagination>li>span:focus {
-	color: var(--mainColor);
-	background: transparent;
-	transition: 0.2s;
+
+
+/* 인기글 별 돌리기 */
+
+
+
+@keyframes binglebingle {
+	
+	from { transform: rotate(0deg); }
+	to { transform: rotate(360deg); }
+
+} 
+
+span.a-badge i.fa.fa-star {
+	
+	animation: binglebingle 4s infinite;
+	
 }
 
-/* 드롭다운 */
-.dropdown.open .dropdown-menu,
-.input-group-btn.open .dropdown-menu {
-	opacity: unset;
-	transform: unset;
-	border: 2px solid var(--mainColor);
-	box-shadow: 0 2px 2px rgba(0, 0, 0, 0.275);
+
+/* 하트 두근두근 효과 주기 */
+
+
+small.favo i.fa.fa-heart {
+
+    animation: heartbeat 1s infinite;
+
 }
 
-.dropdown .dropdown-menu,
-.input-group-btn .dropdown-menu {
-	display: block !important;
-	opacity: 0;
-	transform: scale(0);
-	transform-origin: top;
-	transition: all 0.4s cubic-bezier(0.18, 1.5, 0, 1);
-	padding: 8px 0 3px 0px;
-}
 
-.dropdown-menu>li>a {
-	transition: 0.1s;
-}
+@keyframes heartbeat {
 
-.dropdown-menu>li>a:hover {
-	background: transparent;
-	transform: scaleX(1.04);
-	transition: 0.1s;
-}
+    0% { transform: scale(1); }
 
-#latestDropdownMenu>li>a>span.delrow,
-#favoriteDropdownMenu>li>a>span.delrow {
-	color: var(--mainColor);
-}
+    30% { transform: scale(1.25); }
 
-#latestDropdownMenu>li>a>span.delrow:hover,
-#favoriteDropdownMenu>li>a>span.delrow:hover {
-	background: transparent;
-}
+    42% { transform: scale(0.9); }
 
-#favoriteDropdownMenu>li>a>span.label.label-default {
-	background-color: var(--mainColor);
-}
+    60% { transform: scale(1.15); }
 
-.dropdown-menu .divider {
-	background-color: var(--mainColor);
-	height: 2px;
-	margin: 3px 0;
-}
+    85% { transform: scale(0.95); }
 
-/* 버튼 */
-.btn {
-	color: #fff !important;
-	background-color: var(--mainColor) !important;
-	border-color: var(--mainColor) !important;
-  border-radius: 0;
-	transition: 0.2s;
-}
+    100% { transform: scale(1); }
 
-.btn:hover,
-.btn:focus {
-	color: var(--mainColor) !important;
-	background-color: #fff !important;
-}
-
-.btn.square {
-	margin-right: -2px;
 }
