사각틀로 변경
우정잉 에디션

--- a/pc.css
+++ b/pc.css
@@ -62,9 +62,8 @@ header .row>div:nth-child(1)>a>img {
 
 header #right-search-form>input[type=text] {
 
-    border: 3px solid #BE81F7; /* 검색창 테두리 색 */
+    border: 3px solid #A9D0F5; /* 검색창 테두리 색 */
 
-    border-radius: 15px;
 
 }
 
@@ -76,7 +75,7 @@ header #right-search-form>input[type=text] {
 
 header #right-search-form>#right-search-btn {
 
-    color: #BE81F7; /* 검색창 옆 돋보기 색 */
+    color: #A9D0F5; /* 검색창 옆 돋보기 색 */
 
 }
 
@@ -85,14 +84,13 @@ header #right-search-form>#right-search-btn {
 /* 배너 */
 
 
-
+/*
 header #header-bar>.row, #main .menu-wrapper, #main #main-content>div.frame {
 
     border-radius: 15px;
 
 }
-
-
+*/
 
 /* 광고 배너 */
 
@@ -100,9 +98,8 @@ header #header-bar>.row, #main .menu-wrapper, #main #main-content>div.frame {
 
 header #header-bar>.row {
 
-    border-top: 3px solid #BE81F7  !important; /* 광고 배너 테두리 색 */
-
-    border: 1px solid #FFFFFF; /* 광고 배너 테두리 색 */
+    border: 3px solid #A9D0F5;  /*!important; 광고 배너 테두리 색*/
+    /* border: 1px solid #FFFFFF; 광고 배너 테두리 색 */
 
 }
 
@@ -120,15 +117,24 @@ header #header-bar #header-top-notice strong.notice-badge {
 
 
 
+/* 편지아이콘 및 사용자 아이콘 위치 조정 */
+
+
+header #header-bar #header-menu-right.col-xs-2 {
+	
+    width: 83%;
+    
+}
+
+
+
 /* 좌측 배너 */
 
 
 
 #main .menu-wrapper {
 
-    border: 0px solid #BE81F7; /* 좌측 메뉴 테두리 색 */
-
-    border-top: none !important;
+    border: 3px solid #A9D0F5; /* 좌측 메뉴 테두리 색 */
 
 }
 
@@ -140,12 +146,21 @@ header #header-bar #header-top-notice strong.notice-badge {
 
 #main .menu-wrapper>.header {
 
-    background: #BE81F7; /* 좌측 배너 제목 배경 색 */
-
-    border-radius: 15px 15px 0 0;
+    background: #A9D0F5; /* 좌측 배너 제목 배경 색 */
 
 }
 
+
+#main .menu-wrapper > a {
+	
+    display: block;
+    background: #fff;
+	padding: 6px 2px;
+	text-decoration: none;
+	color:#313131;
+	border-bottom: 1px	solid	#f1f1f1;
+	
+}
 
 
 /* 좌측 배너 빈 공간 */
@@ -160,7 +175,7 @@ header #header-bar #header-top-notice strong.notice-badge {
 
 
 
-/* 좌측 배너 하단 */
+/* 좌측 배너 하단
 
 
 
@@ -171,6 +186,7 @@ header #header-bar #header-top-notice strong.notice-badge {
 }
 
 
+*/
 
 /* 메인 배너 */
 
@@ -178,9 +194,9 @@ header #header-bar #header-top-notice strong.notice-badge {
 
 #main #main-content>div.frame {
 
-    border-top: 0px solid #FFFFFF  !important; /* 메인 배너 테두리 스트리머 이름 위 공간*/
+    border-top: 3px solid #A9D0F5  !important; /* 메인 배너 테두리 스트리머 이름 위 공간*/
 
-    border: 0px solid #FFFFFF; /* 메인 배너 테두리 */
+    border: 3px solid #A9D0F5; /* 메인 배너 테두리 */
 
 }
 
@@ -238,13 +254,13 @@ header #header-bar #header-top-notice strong.notice-badge {
 
     border-radius: 100px;
 
-    border: solid 2px #BE81F7;
+    border: solid 3px #A9D0F5;
 
     background: #FFFFFF;
 
     position : absolute;
 
-    top : 4px;
+    top : 7px;
 
     z-index: 1;
 
@@ -285,8 +301,10 @@ header #header-bar #header-top-notice strong.notice-badge {
 
 #article-list #article-option-area>#article-option-area-toggle-btn {
 	
-	border-radius: 25px;
+	/* border-radius: 25px; */
+	background-color: #FFFFFF;
 	margin-left: -50px;
+	margin-top: 5px;
 
 }
 
@@ -298,8 +316,63 @@ header #header-bar #header-top-notice strong.notice-badge {
 
 #article-list>.article-list-row.notice {
 
-    background-color: #E6E0F8; /* 공지 배경 색 */
+    background-color: #FBEFF8; /* 공지 배경 색 */
 
+}
+
+/* 인기글 배경색 */
+
+
+#article-list>.article-list-row.hot {
+	
+    background-color: #EFF2FB;
+    
+}
+
+
+/* 카테고리 테두리 그리기 */
+
+#article-list #article-list-category {
+	
+    border-top: 3px solid #A9D0F5;
+    
+    border-bottom: 3px solid #A9D0F5;
+    
+    background-color: #fffafa00;
+    
+}
+
+/* 카테고리 내부 패딩 + 글꼴 */
+
+#article-list #article-list-category > a {
+	
+    display: inline-block;
+    
+    padding: 14px 18px;
+    
+    background: #d4eeff55;
+    
+    text-decoration: none;
+    
+    font-size: 12px;
+    
+    font-weight: bold;
+    
+}
+
+
+/* 본문 테두리 오른쪽 제거 */
+
+#article-list > .article-list-row {
+    
+    border-right: 0px;
+    
+}
+
+/* 집 색깔 진하게 만들기 */
+
+a {
+    color: #337ab7;
 }
 
 /* 글 추천 버튼 */
@@ -412,7 +485,7 @@ header #header-bar #header-top-notice strong.notice-badge {
 
 #article-list>.article-list-row>.item>.list-header>span {
 
-    background-color: #; /* 글 추천 수 배경 색 */
+    background-color: #9F81F7; /* 글 추천 수 배경 색 */
 
 }
 
