--- a/pc.css
+++ b/pc.css
@@ -1,17 +1,3 @@
-/* 배경 지정 */
-
-body {
-
-    height: auto !important;
-
-    background: #f0f0f0;    /* 배경색 코드 입력 */
-
-        /* ex) background: #ffffff; */
-
-}
-
-
-
 /* 모든 항목 focus시 아웃라인 제거 */
 *:focus { outline: none !important; }
 
@@ -20,8 +6,13 @@ html {
 	height: auto;
 }
 
+/* 배경 지정 */
 body {
-	background: transparent;
+	background: linear-gradient(to bottom, white, skyblue);
+	/* 방향 = to bottom, to right, to left, to top */
+
+	height: auto;
+
 }
 
 a,
