리디 바탕체 적용
폰트 적용

--- a/pc.css
+++ b/pc.css
@@ -1,6 +1,23 @@
 /* 모든 항목 focus시 아웃라인 제거 */
 *:focus { outline: none !important; }
 
+
+
+/* 리디 바탕체 */
+@font-face {
+
+    font-family: 'RIDIBatang';
+
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.0/RIDIBatang.woff') format('woff');
+
+    font-weight: normal;
+
+    font-style: normal;
+
+}
+
+
+
 html {
 	
     background: linear-gradient(to bottom, white, skyblue);
