--- a/pc.css
+++ b/pc.css
@@ -4,6 +4,7 @@
 
 
 /* 리디 바탕체 */
+/*
 @font-face {
 
     font-family: 'RIDIBatang';
@@ -15,7 +16,7 @@
     font-style: normal;
 
 }
-
+*/
 
 
 html {
