몇 가지 수정
하트 색 진하게
글 추천수 및 댓글 수 색 변경

--- a/pc.css
+++ b/pc.css
@@ -343,7 +343,6 @@ a {
 /* 글 추천 버튼 */
 
 
-
 .vote-btn[data-type="up"] {
 
   border: none;
@@ -450,7 +449,7 @@ a {
 
 #article-list>.article-list-row>.item>.list-header>span {
 
-    background-color: #9F81F7; /* 글 추천 수 배경 색 */
+    background-color: #A9D0F5; /* 글 추천 수 배경 색 */
 
 }
 
@@ -462,7 +461,7 @@ a {
 
 #article-list>.article-list-row>.item>.list-title>small.comment-count {
 
-    color: #; /* 댓글 수 색 */
+    color: #A9D0F5; /* 댓글 수 색 */
 
 }
 
@@ -543,6 +542,13 @@ a {
 img[src="https://static-cdn.jtvnw.net/chat-badges/mod.png"] {
 
     display: none;
+
+}
+
+
+#article-list>.article-list-row>.item>.list-title>small.favo {
+
+    color: red;
 
 }
 
