--- a/pc.css
+++ b/pc.css
@@ -53,9 +53,32 @@ a:focus {
 }
 
 
+
+/*트게더 로고 변경하기*/
+
+header .row > div:first-child > a {
+
+    background-repeat: no-repeat;
+
+    display: block;
+
+    width: 200px;
+
+    height: 50px;
+
+    background-image: url(https://1.bp.blogspot.com/-JAKRI5eqV_M/Xdkdbbnr_bI/AAAAAAAAXcg/zXGeChKy2TMc14mgukhavf9wNhE0oN8iwCLcBGAsYHQ/s320/logo_pc.png);
+
+}
+
+header .row>div:nth-child(1)>a img {
+
+    opacity: 0
+    
+}
+
+
+
 /* 검색창 */
-
-
 
 header #right-search-form>input[type=text] {
 
