사이즈 조절 문구 추가
추가추가

--- a/pc.css
+++ b/pc.css
@@ -66,14 +66,16 @@ header .row > div:first-child > a {
 
     background: url(https://1.bp.blogspot.com/-JAKRI5eqV_M/Xdkdbbnr_bI/AAAAAAAAXcg/zXGeChKy2TMc14mgukhavf9wNhE0oN8iwCLcBGAsYHQ/s320/logo_pc.png) no-repeat; 
 
-    background-size: auto 50px;
+    background-size: 145px 100px;
+
+    background-position: center;
 
 }
 
 header .row>div:nth-child(1)>a img {
 
     opacity: 0
-    
+
 }
 
 
