--- a/pc.css
+++ b/pc.css
@@ -62,7 +62,7 @@ header .row > div:first-child > a {
 
     width: 200px;
 
-    height: 50px;
+    height: 30px;
 
     background: url(https://1.bp.blogspot.com/-WqcjmzQ9gZU/XdkzQukbg7I/AAAAAAAAXe8/2cSBMemm8IcFKQ16jlSw-92tIdVxuIxcACLcBGAsYHQ/s1600/logo_pc_ori_39.png) no-repeat; 
 
@@ -71,6 +71,7 @@ header .row > div:first-child > a {
 header .row>div:nth-child(1)>a img {
 
     opacity: 0
+    margin-top: ;
 
 }
 
