--- a/pc.css
+++ b/pc.css
@@ -62,7 +62,7 @@ header .row > div:first-child > a {
 
     width: 200px;
 
-    height: 40px;
+    height: 50px;
 
     background: url(https://1.bp.blogspot.com/-WqcjmzQ9gZU/XdkzQukbg7I/AAAAAAAAXe8/2cSBMemm8IcFKQ16jlSw-92tIdVxuIxcACLcBGAsYHQ/s1600/logo_pc_ori_39.png) no-repeat; 
 
@@ -75,6 +75,14 @@ header .row>div:nth-child(1)>a img {
 }
 
 
+
+/* 헤더바 높이 조절 */
+
+header #header-bar {
+
+    margin-top: 0.1em;
+
+}
 
 /* 검색창 */
 
