--- a/pc.css
+++ b/pc.css
@@ -160,6 +160,8 @@ header #header-bar #header-menu-right.col-xs-2 {
 
     border: 3px solid #A9D0F5; /* 좌측 메뉴 테두리 색 */
 
+    border-radius: 1px;
+
 }
 
 
