--- a/pc.css
+++ b/pc.css
@@ -158,6 +158,8 @@ header #header-bar #header-menu-right.col-xs-2 {
 
     border-radius: 10px 10px 0 0;
 
+    background: #FFFFFF;
+
 }
 
 #main .menu-wrapper a:nth-last-child(1) {
@@ -173,8 +175,6 @@ header #header-bar #header-menu-right.col-xs-2 {
 	padding: 6px 2px;
 
 	text-decoration: none;
-
-	border-color:#A9D0F5;
 	
 }
 
