--- a/pc.css
+++ b/pc.css
@@ -281,6 +281,14 @@ header #header-bar #header-menu-right.col-xs-2 {
 
 
 
+/* 게시글 안 이미지 아래 라인 색 변경 */
+
+#article-content-wrapper>.header {
+
+    border-top: 2px solid #A9D0F5;
+
+}
+
 
 /* 카테고리 쪽 맨 우측 공지 가리기 모양 둥글게 및 위치 조정 */
 
