강제로 조절
어디서 막고 있는거지

--- a/pc.css
+++ b/pc.css
@@ -263,7 +263,7 @@ header #header-bar #header-menu-right.col-xs-2 {
 
 #article-list > .article-list-row > .item > .list-title {
 
-    padding: 10px 0 10px 0;
+    padding: 10px 0 10px 0 !important;
 
     vertical-align: middle;
 
