폰트 크기 변경
변경

--- a/pc.css
+++ b/pc.css
@@ -267,6 +267,8 @@ header #header-bar #header-menu-right.col-xs-2 {
 
     vertical-align: middle;
 
+    font-size: 14px;
+
 }
 
 /* 카테고리 쪽 맨 우측 공지 가리기 모양 둥글게 및 위치 조정 */
