베라체 복귀
복귀

--- a/pc.css
+++ b/pc.css
@@ -3,6 +3,20 @@
 
 
 
+ @font-face {
+
+    font-family: 'BRBA_B';
+
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_seven@1.2/BRBA_B.woff') format('woff');
+
+    font-weight: normal;
+
+    font-style: normal;
+
+} 
+
+
+
 html {
 	
     background: linear-gradient(to bottom, white, skyblue);
