--- a/pc.css
+++ b/pc.css
@@ -120,7 +120,7 @@ header #header-bar>.row {
 
 header #header-bar #header-top-notice strong.notice-badge {
 
-    background: #FFFFFF; /* 광고 배너 광고 뱃지 배경 색상 (전광판)*/
+    background: #A9D0F5; /* 광고 배너 광고 뱃지 배경 색상 (전광판)*/
 
 }
 
