--- a/pc.css
+++ b/pc.css
@@ -1,5 +1,9 @@
 /* 모든 항목 focus시 아웃라인 제거 */
-*:focus { outline: none !important; }
+*:focus {
+
+    outline: none !important;
+
+}
 
 
 
@@ -82,8 +86,6 @@ header #right-search-form>input[type=text] {
 
 
 /* 검색 버튼 */
-
-
 
 header #right-search-form>#right-search-btn {
 
@@ -273,7 +275,7 @@ header #header-bar #header-menu-right.col-xs-2 {
 
 }
 
-/* 게시글들 간격 조절하는 부분 */
+/* 게시글들 간격 조절하는 부분
 
 #article-list > .article-list-row > .item > .list-title {
 
@@ -284,6 +286,7 @@ header #header-bar #header-menu-right.col-xs-2 {
     font-size: 14px;
 
 }
+*/
 
 /* 카테고리 쪽 맨 우측 공지 가리기 모양 둥글게 및 위치 조정 */
 
