즐찾부분 오타 수정
글꼴 이름을 틀리다니

--- a/pc.css
+++ b/pc.css
@@ -32,7 +32,9 @@ html {
 }
 
 body {
+
 	background: transparent;
+
 }
 
 a,
@@ -237,11 +239,13 @@ header #header-bar #header-menu-right.col-xs-2 {
 
     font-weight: 400;
 
-    font-family: 'BRRA_R';
+    font-family: 'BRBA_B';
 
-    font-size: 14px;
+    font-size: 13px;
 
     margin: .1em;
+
+    font-weight: bold;
 
 }
 
