--- a/pc.css
+++ b/pc.css
@@ -269,6 +269,8 @@ header #header-bar #header-menu-right.col-xs-2 {
 
   font-weight: bolder;
 
+  font-size: 18px;
+
 }
 
 /* 즐겨찾기 , 소개, 채널, 스케줄, 클립 버튼들 마진 */
