--- a/pc.css
+++ b/pc.css
@@ -265,7 +265,7 @@ header #header-bar #header-menu-right.col-xs-2 {
 
 #board-info h1>a {
 
-  color: #A9D0F5;
+  color: #FBA4A4;
 
   font-weight: bolder;
 
