--- a/pc.css
+++ b/pc.css
@@ -76,25 +76,32 @@ header #header-bar {
 
 }
 
-/* 검색창 */
+/* 검색창 + 검색버튼 */
 
 header #right-search-form>input[type=text] {
-
-    border: 3px solid #A9D0F5; /* 검색창 테두리 색 */
-
-
+    border-top: 1px dashed #69b7f0 !important;
+    border: 1px dashed #69b7f0;
+    box-shadow: 0 0 0 4px #fff;
+    border-radius: 15px;
 }
 
+header #right-search-form>#right-search-btn {
+    border-top: 1px dashed #69b7f0 !important;
+    border: 1px dashed #69b7f0;
+    box-shadow: 0 0 0 4px #fff;
+    border-radius: 15px;
+    color: #69b7f0;
+    background: #ffffff;
+}
 
-
-/* 검색 버튼 */
+/* 검색 버튼
 
 header #right-search-form>#right-search-btn {
 
-    color: #A9D0F5; /* 검색창 옆 돋보기 색 */
+    color: #A9D0F5; 검색창 옆 돋보기 색
 
 }
-
+*/
 
 
 /* 배너 */
