--- a/pc.css
+++ b/pc.css
@@ -529,9 +529,11 @@ a {
 .pagination>.active>a,
 .pagination>.active>a:focus,
 .pagination>.active>span,
-.pagination>.active>span:focus {
-  background: skyblue;
-  color: white;
+.pagination>.active>span:focus{
+  box-shadow: 0 0 2px 0 white, inset 0 0 2px 0 white;
+  background: white;
+  color: black;
+  text-shadow: 0px 0px 2px #555;
   transition: 0.2s;
   border: none;
   border-radius: 5px;
