--- a/pc.css
+++ b/pc.css
@@ -561,10 +561,9 @@ a {
 */
 
 /* 진은검 아이콘 삭제 */
-img[src="https://static-cdn.jtvnw.net/badges/v1/3267646d-33f0-4b17-b3df-f923a41db1d0/1"] {
-
+img[src="https://static-cdn.jtvnw.net/badges/v1/3267646d-33f0-4b17-b3df-f923a41db1d0/1"]
+{
     display: none;
-
 }
 
 
